# AD

./: .gitignore  README.md  main.py  pyproject.toml
docs/: getting_started_research.md  official_baseline_contract.md  result_reading_guide.md
examples/: data_usage_demo.md  data_usage_demo.py
scripts/: check_research_env.py  export_ablation_summary.py  export_audit_tables.py  export_benchmark_summary.py  export_experiment_report.py  export_failure_analysis.py  export_grouped_paper_tables.py  export_paper_tables.py  print_official_contract.py  run_ablation_matrix.py  run_audited_paper_matrix.py  run_benchmark_suite.py  run_budgeted_paper_matrix.py  run_diffusion_baseline.py  run_diffusion_direction_baseline.py  run_diffusion_pathcost_baseline.py  run_experiment.py  run_feature_baseline.py  run_multiseed_matrix.py  run_official_filled_matrix.py  run_recon_baseline.py  run_reference_baseline.py  run_reference_diffusion_baseline.py
tests/: test_ablation_budget_overrides.py  test_ablation_compatibility.py  test_ablation_matrix.py  test_ablation_runner.py  test_ablation_smoke.py  test_aggregators.py  test_amp_training_step.py  test_artifacts.py  test_artifacts_to_evidence_pipeline.py  test_audited_matrix_smoke.py  test_autoencoder.py  test_baseline_filling_contract.py  test_benchmark_metadata.py  test_benchmark_smoke.py  test_benchmark_suite.py  test_budget_contract.py  test_budgeted_paper_matrix_smoke.py  test_checkpoint_io.py  test_cli_entrypoints.py  test_cli_launch.py  test_conditional_violation_evidence.py  test_data_usage_demo.py  test_dataloader_runtime_config.py  (+75 more)
(+137 files in other folders)
